# sphinx-test-spec

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  noxfile.py  pyproject.toml  setup.py  tox.toml  translations.sh
.github/workflows/: ci.yaml  release.yaml
docs/: builders.rst  changelog.rst  conf.py  configuration.rst  directives.rst  index.rst  requirements.txt  roles.rst
sphinx_test_spec/: __init__.py  builder.py  directives.py  domain.py  main.py
sphinx_test_spec/locales/de_DE/LC_MESSAGES/: sphinx_test_spec.po
sphinx_test_spec/locales/en_US/LC_MESSAGES/: sphinx_test_spec.po
tests/: conftest.py  test_doc_builder_json.py  test_doc_case_classes.py  test_doc_case_content.py  test_doc_case_custom_classes.py  test_doc_case_jinja.py  test_doc_case_title.py  test_doc_column_widths.py  test_doc_multiple_cases.py  test_doc_no_reactions.py  test_doc_primary_domain.py  test_doc_role_action.py  test_doc_role_action_invalid.py  test_doc_role_case.py  test_doc_role_file.py  test_doc_role_file_filter.py  test_doc_role_file_json.py  test_doc_short_example.py  test_doc_state_symbol.py  test_doc_wrong_level_reactions.py  util.py
tests/doc_test/doc_builder_file_json/: index.rst
tests/doc_test/doc_case_classes/: conf.py  index.rst
tests/doc_test/doc_case_custom_classes/: index.rst
tests/doc_test/doc_case_jinja/: conf.py  index.rst
tests/doc_test/doc_case_title/: conf.py  index.rst
tests/doc_test/doc_column_widths/: conf.py
tests/doc_test/doc_multiple_cases/: Makefile  index.rst
tests/doc_test/doc_no_reactions/: index.rst
tests/doc_test/doc_primary_domain/: conf.py  index.rst
tests/doc_test/doc_role_action/: index.rst
tests/doc_test/doc_role_action_invalid/: index.rst  make.bat
tests/doc_test/doc_role_case/: index.rst
tests/doc_test/doc_role_file/: index.rst
tests/doc_test/doc_role_file_filter/: conf.py  index.rst
tests/doc_test/doc_short_example/: Makefile  index.rst
tests/doc_test/doc_state_symbol/: conf.py  index.rst
tests/doc_test/doc_wrong_level_reactions/: index.rst
