[tool.poetry]
name = "sphinx-test-spec"

# !! Don't miss updates in setup.py or related files !!!
version = "0.0.1"

description = "Sphinx extension definition of manual test specifications"
authors = ["team procitec <info@procitec.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/procitec/sphinx-test-spec"
documentation = ""
classifiers=[
        'Development Status :: 3 - Alpha',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Operating System :: OS Independent',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.10',
        'Topic :: Documentation',
        'Topic :: Utilities',
        'Framework :: Sphinx :: Extension',
    ]

packages = [
    {include = "sphinx_test_spec", from = "."}
]

[tool.poetry.dependencies]
python = ">3.6.2,<4.0"
sphinx = [
    { version = ">4.0", python = "<3.10" },
    { version = ">6.0", python = ">=3.10" },
]

[tool.poetry.dev-dependencies]
pre-commit = "^2"
# test dependencies
pytest = ">6.2.5"
pytest-xdist="*"  # parallelisation

# formatting dependencies
black = "^22.3"
isort = "^5.7.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.poetry.extras]
docs = ["sphinx>=5.0"]

[build-system]
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]
build-backend = "poetry.core.masonry.api"

